Added mobile friendlt script to css

--- a/P1_html.html
+++ b/P1_html.html
@@ -9,7 +9,7 @@
 </head>
 
 <section>
-  <!--First Section*/-->
+  <!--First Section-->
   <body>
     <h1>Hello World!</h1>
     <h2>This is my 1st day of learning how to code in <em>HTML</em></h2>
