--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               >
             </li>
             <li>
-              <a href="www.linkedin.com/in/nixonchow" target="_blank"
+              <a href="https://www.linkedin.com/in/nixonchow" target="_blank"
                 >LinkedIn</a
               >
             </li>
@@ -77,7 +77,9 @@
     </main>
   </body>
 
-  <footer class="footer">
-    <p>@ 2024.10 v0.01 Nixon Chow.</p>
-  </footer>
+  <body>
+    <footer class="footer">
+      <p>@ 2024.10 v0.01 Nixon Chow.</p>
+    </footer>
+  </body>
 </html>
